--- a/linux/Makefile
+++ b/linux/Makefile
@@ -1,7 +1,8 @@
 .PHONY: all clean
 
-CFLAGS = -O2 -g -Wall -Wextra -Wshadow -Werror -std=c99
-CXXFLAGS = -O2 -g -Wall -Wextra -Wshadow -Werror -std=c++17
+COMPILER_FLAGS = -O2 -g -Wall -Wextra -Wshadow -Werror -pedantic -pedantic-errors -DUNICODE -DWINVER=0x0A00 -D_WIN32_WINNT=0x0A00
+CFLAGS = $(COMPILER_FLAGS) -std=c99
+CXXFLAGS = $(COMPILER_FLAGS) -std=c++17
 LDFLAGS = -flto
 LDLIBS = -lstdc++
 
