Remove Windows defines from compiler flags

--- a/linux/Makefile
+++ b/linux/Makefile
@@ -1,6 +1,6 @@
 .PHONY: all clean
 
-COMPILER_FLAGS = -O2 -g -Wall -Wextra -Wshadow -Werror -pedantic -pedantic-errors -DUNICODE -DWINVER=0x0A00 -D_WIN32_WINNT=0x0A00
+COMPILER_FLAGS = -O2 -g -Wall -Wextra -Wshadow -Werror -pedantic -pedantic-errors
 CFLAGS = $(COMPILER_FLAGS) -std=c99
 CXXFLAGS = $(COMPILER_FLAGS) -std=c++17
 LDFLAGS = -flto
