Write messages to the Event Log

--- a/windows/cross32.ini
+++ b/windows/cross32.ini
@@ -8,4 +8,5 @@ endian = 'little'
 c = 'i686-w64-mingw32-gcc'
 cpp = 'i686-w64-mingw32-g++'
 strip = 'i686-w64-mingw32-strip'
+windmc = 'i686-w64-mingw32-windmc'
 windres = 'i686-w64-mingw32-windres'
