--- a/windows/cross64.ini
+++ b/windows/cross64.ini
@@ -8,4 +8,5 @@ endian = 'little'
 c = 'x86_64-w64-mingw32-gcc'
 cpp = 'x86_64-w64-mingw32-g++'
 strip = 'x86_64-w64-mingw32-strip'
+windmc = 'x86_64-w64-mingw32-windmc'
 windres = 'x86_64-w64-mingw32-windres'
