Fix windows build

--- a/windows/Makefile
+++ b/windows/Makefile
@@ -24,11 +24,11 @@ $(BUILD_DIR)/:
 $(RELEASE_DIR)/: | $(BUILD_DIR)/
 	rm -rf "$(RELEASE_DIR)/"
 	mkdir $(RELEASE_DIR)/
-	meson --buildtype=release $(RELEASE_DIR)/ $(MESON_CROSS) $(MESON_OPTS) || (rm -rf "$(RELEASE_DIR)/"; false)
+	meson setup --buildtype=release $(RELEASE_DIR)/ $(MESON_CROSS) $(MESON_OPTS) || (rm -rf "$(RELEASE_DIR)/"; false)
 $(DEBUG_DIR)/: | $(BUILD_DIR)/
 	rm -rf "$(DEBUG_DIR)/"
 	mkdir $(DEBUG_DIR)/
-	meson --buildtype=debug $(DEBUG_DIR)/ $(MESON_CROSS) $(MESON_OPTS) || (rm -rf "$(DEBUG_DIR)/"; false)
+	meson setup --buildtype=debug $(DEBUG_DIR)/ $(MESON_CROSS) $(MESON_OPTS) || (rm -rf "$(DEBUG_DIR)/"; false)
 
 compile: | $(RELEASE_DIR)/
 	$(NINJA) -C $(RELEASE_DIR)/
