Automatically update to the latest version of meson/ninja

--- a/.uuid-uk/Dockerfile
+++ b/.uuid-uk/Dockerfile
@@ -10,12 +10,17 @@ RUN \
 	--mount=type=cache,sharing=locked,target=/var/cache/apt,id=debian-testing-var-cache-apt \
 	--mount=type=cache,sharing=locked,target=/var/lib/apt,id=debian-testing-var-lib-apt \
 	apt-get install -y build-essential git procps python3-pip
-
-RUN \
-	--mount=type=cache,target=/root/.cache/pip,sharing=locked,id=debian-testing-root-cache-pip \
-	pip3 install --break-system-packages -U meson ninja
-
 RUN \
 	--mount=type=cache,sharing=locked,target=/var/cache/apt,id=debian-testing-var-cache-apt \
 	--mount=type=cache,sharing=locked,target=/var/lib/apt,id=debian-testing-var-lib-apt \
 	apt-get install -y mingw-w64
+
+ADD https://pypi.org/pypi/ninja/json /dev/shm/ninja.json
+RUN \
+	--mount=type=cache,target=/root/.cache/pip,sharing=locked,id=debian-testing-root-cache-pip \
+	pip3 install --break-system-packages -U ninja
+
+ADD https://pypi.org/pypi/meson/json /dev/shm/meson.json
+RUN \
+	--mount=type=cache,target=/root/.cache/pip,sharing=locked,id=debian-testing-root-cache-pip \
+	pip3 install --break-system-packages -U meson
