Reduce size of mingw-w64 install

--- a/.uuid-uk/Dockerfile
+++ b/.uuid-uk/Dockerfile
@@ -13,7 +13,7 @@ RUN \
 RUN \
 	--mount=type=cache,sharing=locked,target=/var/cache/apt,id=debian-testing-var-cache-apt \
 	--mount=type=cache,sharing=locked,target=/var/lib/apt,id=debian-testing-var-lib-apt \
-	apt-get install -y mingw-w64
+	apt-get install -y gcc-mingw-w64-x86-64-win32 g++-mingw-w64-x86-64-win32
 
 ADD https://pypi.org/pypi/ninja/json /dev/shm/ninja.json
 RUN \
