Log versions of python and pip

--- a/.uuid-uk/Dockerfile
+++ b/.uuid-uk/Dockerfile
@@ -20,9 +20,13 @@ RUN \
 ADD https://pypi.org/pypi/ninja/json /dev/shm/ninja.json
 RUN \
 	--mount=type=cache,target=/root/.cache/pip,sharing=locked,id=debian-testing-root-cache-pip \
+	python3 --version && \
+	pip3 --version && \
 	pip3 install --break-system-packages -U ninja
 
 ADD https://pypi.org/pypi/meson/json /dev/shm/meson.json
 RUN \
 	--mount=type=cache,target=/root/.cache/pip,sharing=locked,id=debian-testing-root-cache-pip \
+	python3 --version && \
+	pip3 --version && \
 	pip3 install --break-system-packages -U meson
